--- a/src/workerd/api/tests/BUILD.bazel
+++ b/src/workerd/api/tests/BUILD.bazel
@@ -14,6 +14,12 @@ wd_test(
 )
 
 wd_test(
+    src = "tcp-ingress-test.wd-test",
+    args = ["--experimental"],
+    data = ["tcp-ingress-test.js"],
+)
+
+wd_test(
     src = "actor-alarms-test.wd-test",
     args = ["--experimental"],
     data = ["actor-alarms-test.js"],
