--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
             { name: linux, arch: X64, image: ubuntu-22.04-16core },
             { name: linux-arm, arch: ARM64, image: ubuntu-22.04-arm-16core },
             { name: macOS, arch: ARM64, image: macos-15-xlarge, use_lld: true },
-            { name: windows, arch: X64, image: windows-2025-16core },
+            { name: windows, arch: X64, image: windows-2025-vs2026 },
           ]
         config: [
             # Default build: no suffix or additional bazel arguments
@@ -55,7 +55,7 @@ jobs:
           # - os:     { name : windows, image : windows-2025 }
           #   config: { suffix: -debug, bazel-args: --config=windows_dbg }
         exclude:
-          - os: { name: windows, arch: X64, image: windows-2025-16core }
+          - os: { name: windows, arch: X64, image: windows-2025-vs2026 }
             config: { suffix: -debug }
           # due to resource constraints, exclude the macOS and x64 Linux debug runners for now.
           # linux-asan and arm64 linux-debug should provide sufficient coverage for building in the
