--- a/src/workerd/api/BUILD.bazel
+++ b/src/workerd/api/BUILD.bazel
@@ -768,3 +768,9 @@ wd_test(
     args = ["--experimental"],
     data = ["tests/leak-fetch-test.js"],
 )
+
+wd_test(
+    src = "tests/messageport-test.wd-test",
+    args = ["--experimental"],
+    data = ["tests/messageport-test.js"],
+)
