--- a/src/pyodide/BUILD.bazel
+++ b/src/pyodide/BUILD.bazel
@@ -1,5 +1,6 @@
 load("@bazel_skylib//rules:write_file.bzl", "write_file")
 load("//:build/python_metadata.bzl", "BUNDLE_VERSION_INFO")
+load("//:build/wd_cc_embed.bzl", "wd_cc_embed")
 load(":helpers.bzl", "pyodide_extra", "pyodide_static", "python_bundles")
 
 pyodide_extra()
@@ -13,6 +14,13 @@ DEV_VERSION = BUNDLE_VERSION_INFO["development"]["real_pyodide_version"]
 alias(
     name = "pyodide.capnp.bin",
     actual = "pyodide.capnp.bin@rule@" + DEV_VERSION,
+    visibility = ["//visibility:public"],
+)
+
+wd_cc_embed(
+    name = "python-entrypoint",
+    src = "python-entrypoint.js",
+    base_name = "python-entrypoint",
     visibility = ["//visibility:public"],
 )
 
