--- a/src/workerd/server/BUILD.bazel
+++ b/src/workerd/server/BUILD.bazel
@@ -133,6 +133,7 @@ wd_cc_library(
         "//src/cloudflare",
         "//src/node",
         "//src/pyodide:pyodide_static",
+        "//src/pyodide:python-entrypoint",
         "//src/workerd/api:html-rewriter",
         "//src/workerd/api:hyperdrive",
         "//src/workerd/api:memory-cache",
