Add `workerLoader` binding to workerd config.
The binding is declared like: `(workerLoader = (id = "foo"))`

Similar to memory cache bindings, if the same ID is used in different bindings within the same workerd process, they will bind to the same loader, meaning they share the same LRU cache of workers.

(Well, at present there's no LRU, the isolates just stay alive forever, but...)

--- a/src/workerd/api/BUILD.bazel
+++ b/src/workerd/api/BUILD.bazel
@@ -750,3 +750,9 @@ wd_test(
     args = ["--experimental"],
     data = ["tests/request-signal-passthrough.js"],
 )
+
+wd_test(
+    src = "worker-loader-test.wd-test",
+    args = ["--experimental"],
+    data = ["worker-loader-test.js"],
+)
