--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,5 +1,9 @@
 # We do not use rules_java, but the build fails if it is not provided.
-bazel_dep(name = "rules_java", version = "8.11.0")
+bazel_dep(name = "rules_java", version = "8.13.0")
+
+# rules_java somehow fails on Bazel 8.3.0 when workspace logic is enabled based on missing
+# bazel_features variables, but requiring a more recent version fixes this.
+bazel_dep(name = "bazel_features", version = "1.32.0")
 
 # needed by perfetto, but not actually used.
 bazel_dep(name = "rules_android", version = "0.6.4")
