--- a/src/workerd/server/tests/container-client/BUILD.bazel
+++ b/src/workerd/server/tests/container-client/BUILD.bazel
@@ -2,8 +2,10 @@ load("//:build/wd_test.bzl", "wd_test")
 
 wd_test(
     size = "enormous",
-    src = "test.wd-test",
+    src = "container-client.wd-test",
     args = ["--experimental"],
     data = ["test.js"],
-    tags = ["off-by-default"],
+    tags = [
+        "requires-container-engine",
+    ],
 )
