--- a/src/workerd/api/BUILD.bazel
+++ b/src/workerd/api/BUILD.bazel
@@ -331,6 +331,11 @@ kj_test(
 )
 
 kj_test(
+    src = "base64-test.c++",
+    deps = ["//src/workerd/tests:test-fixture"],
+)
+
+kj_test(
     src = "cf-property-test.c++",
     deps = ["//src/workerd/tests:test-fixture"],
 )
