--- a/src/workerd/api/node/BUILD.bazel
+++ b/src/workerd/api/node/BUILD.bazel
@@ -408,6 +408,37 @@ wd_test(
 )
 
 wd_test(
+    src = "tests/http-outgoing-nodejs-test.wd-test",
+    args = ["--experimental"],
+    data = ["tests/http-outgoing-nodejs-test.js"],
+)
+
+js_binary(
+    name = "http-client-server",
+    entry_point = "tests/http-client-server.js",
+)
+
+wd_test(
+    src = "tests/http-client-nodejs-test.wd-test",
+    args = ["--experimental"],
+    data = ["tests/http-client-nodejs-test.js"],
+    sidecar = "http-client-server",
+    sidecar_port_bindings = [
+        "PONG_SERVER_PORT",
+        "ASD_SERVER_PORT",
+        "TIMEOUT_SERVER_PORT",
+        "HELLO_WORLD_SERVER_PORT",
+        "HEADER_VALIDATION_SERVER_PORT",
+    ],
+)
+
+wd_test(
+    src = "tests/http-agent-nodejs-test.wd-test",
+    args = ["--experimental"],
+    data = ["tests/http-agent-nodejs-test.js"],
+)
+
+wd_test(
     src = "tests/bound-als-test.wd-test",
     args = ["--experimental"],
     data = ["tests/bound-als-test.js"],
