--- a/src/workerd/api/BUILD.bazel
+++ b/src/workerd/api/BUILD.bazel
@@ -756,3 +756,9 @@ wd_test(
     args = ["--experimental"],
     data = ["worker-loader-test.js"],
 )
+
+wd_test(
+    src = "tests/leak-fetch-test.wd-test",
+    args = ["--experimental"],
+    data = ["tests/leak-fetch-test.js"],
+)
