Separate process implementations for process compat

--- a/src/workerd/api/node/BUILD.bazel
+++ b/src/workerd/api/node/BUILD.bazel
@@ -284,6 +284,12 @@ wd_test(
 )
 
 wd_test(
+    src = "tests/process-legacy-nodejs-test.wd-test",
+    args = ["--experimental"],
+    data = ["tests/process-legacy-nodejs-test.js"],
+)
+
+wd_test(
     src = "tests/querystring-nodejs-test.wd-test",
     args = ["--experimental"],
     data = ["tests/querystring-nodejs-test.js"],
