kj-rs update, using conversions from the library

--- a/src/rust/cxx-integration/BUILD.bazel
+++ b/src/rust/cxx-integration/BUILD.bazel
@@ -10,6 +10,7 @@ wd_rust_crate(
     deps = [
         "@crates_vendor//:tokio",
         "@crates_vendor//:tracing",
+        "@workerd-cxx//kj-rs",
     ],
 )
 
