--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -11,6 +11,22 @@
           "args": ["-i", "{buffer_path}"]
         }
       }
+    },
+    "Python": {
+      "formatter": {
+        "external": {
+          "command": "bazel-bin/build/deps/formatters/ruff",
+          "arguments": ["format", "--stdin-filename", "{buffer_path}"]
+        }
+      }
+    },
+    "Starlark": {
+      "formatter": {
+        "external": {
+          "command": "bazel-bin/build/deps/formatters/buildifier",
+          "arguments": ["--lint=fix", "--path", "{buffer_path}"]
+        }
+      }
     }
   },
   "lsp": {
