Make import_from_javascript work at top level with Pyodide 0.27

--- a/src/workerd/server/tests/python/BUILD.bazel
+++ b/src/workerd/server/tests/python/BUILD.bazel
@@ -47,9 +47,7 @@ py_wd_test("seek-metadatafs")
     for python_version, info in BUNDLE_VERSION_INFO.items()
 ]
 
-py_wd_test(
-    "undefined-handler",
-)
+py_wd_test("undefined-handler")
 
 py_wd_test("vendor_dir")
 
