--- a/src/workerd/api/node/BUILD.bazel
+++ b/src/workerd/api/node/BUILD.bazel
@@ -533,3 +533,9 @@ wd_test(
     args = ["--experimental"],
     data = ["tests/fs-readstream-test.js"],
 )
+
+wd_test(
+    src = "tests/fs-writestream-test.wd-test",
+    args = ["--experimental"],
+    data = ["tests/fs-writestream-test.js"],
+)
