add coverage and profile commands to justfile

--- a/.bazelrc
+++ b/.bazelrc
@@ -398,7 +398,11 @@ build:windows --cxxopt='/Zc:__cplusplus' --host_cxxopt='/Zc:__cplusplus'
 # enable clang coverage: https://clang.llvm.org/docs/SourceBasedCodeCoverage.html
 build:clang-coverage --copt="-fprofile-instr-generate" --linkopt="-fprofile-instr-generate"
 build:clang-coverage --copt="-fcoverage-mapping" --linkopt="-fcoverage-mapping"
+# disabled due to clang: warning: argument unused during compilation: '--coverage'
+build:clang-coverage --copt='-Wno-unused-command-line-argument' --host_copt='-Wno-unused-command-line-argument'
 
 # This config is defined internally and enabled on many machines.
 # Defining it as empty just so these machines can run build commands from the workerd repo
 build:rosetta-arm64 --define=rosetta_arm64_no_op=1
+
+coverage --test_timeout=120,120,120,120 --strategy=CoverageReport=local --instrument_test_targets --combined_report=lcov
