--- a/src/rust/gen-compile-cache/BUILD.bazel
+++ b/src/rust/gen-compile-cache/BUILD.bazel
@@ -4,6 +4,7 @@ load("@workerd//:build/wd_rust_binary.bzl", "wd_rust_binary")
 wd_rust_binary(
     name = "gen-compile-cache",
     cxx_bridge_src = "main.rs",
+    test_size = "large",
     visibility = ["//visibility:public"],
     deps = [
         ":cxx-bridge",
