--- a/src/workerd/api/BUILD.bazel
+++ b/src/workerd/api/BUILD.bazel
@@ -559,6 +559,7 @@ wd_test(
 )
 
 wd_test(
+    size = "large",
     src = "tests/htmlrewriter-test.wd-test",
     args = ["--experimental"],
     data = ["tests/htmlrewriter-test.js"],
