--- a/deps/rust/crates/BUILD.async-trait-0.1.88.bazel
+++ b/deps/rust/crates/BUILD.async-trait-0.1.88.bazel
@@ -6,12 +6,12 @@
 #     bazel run @@//deps/rust:crates_vendor
 ###############################################################################
 
-load("@rules_rust//rust:defs.bzl", "rust_library")
+load("@rules_rust//rust:defs.bzl", "rust_proc_macro")
 
 package(default_visibility = ["//visibility:public"])
 
-rust_library(
-    name = "syn",
+rust_proc_macro(
+    name = "async_trait",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,18 +28,6 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "clone-impls",
-        "default",
-        "derive",
-        "extra-traits",
-        "fold",
-        "full",
-        "parsing",
-        "printing",
-        "proc-macro",
-        "visit-mut",
-    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -47,15 +35,15 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=syn",
+        "crate-name=async-trait",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "2.0.104",
+    version = "0.1.88",
     deps = [
         "@crates_vendor__proc-macro2-1.0.95//:proc_macro2",
         "@crates_vendor__quote-1.0.40//:quote",
-        "@crates_vendor__unicode-ident-1.0.18//:unicode_ident",
+        "@crates_vendor__syn-2.0.104//:syn",
     ],
 )
