--- a/src/workerd/server/tests/python/vendor_pkg_tests/BUILD
+++ b/src/workerd/server/tests/python/vendor_pkg_tests/BUILD
@@ -2,4 +2,7 @@ load(":vendor_test.bzl", "vendored_py_wd_test")
 
 vendored_py_wd_test("fastapi")
 
-vendored_py_wd_test("beautifulsoup4")
+vendored_py_wd_test(
+    "beautifulsoup4",
+    skip_python_flags = ["0.28.0"],
+)
