--- a/src/workerd/io/BUILD.bazel
+++ b/src/workerd/io/BUILD.bazel
@@ -115,6 +115,7 @@ wd_cc_library(
         "//src/workerd/util:completion-membrane",
         "//src/workerd/util:exception",
         "//src/workerd/util:sqlite",
+        "//src/workerd/util:strong-bool",
         "//src/workerd/util:thread-scopes",
         "//src/workerd/util:uuid",
         "@capnp-cpp//src/capnp:capnp-rpc",
