--- a/deps/rust/crates/BUILD.ruff_python_ast-0.0.0.bazel
+++ b/deps/rust/crates/BUILD.ruff_python_ast-0.0.0.bazel
@@ -29,7 +29,7 @@ rust_library(
         ],
     ),
     crate_root = "src/lib.rs",
-    edition = "2021",
+    edition = "2024",
     proc_macro_deps = [
         "@crates_vendor__is-macro-0.3.7//:is_macro",
     ],
@@ -54,5 +54,6 @@ rust_library(
         "@crates_vendor__ruff_source_file-0.0.0//:ruff_source_file",
         "@crates_vendor__ruff_text_size-0.0.0//:ruff_text_size",
         "@crates_vendor__rustc-hash-2.1.1//:rustc_hash",
+        "@crates_vendor__thiserror-2.0.12//:thiserror",
     ],
 )
