Fix github token permissions for internal-build

--- a/.github/workflows/internal-build-fork.yml
+++ b/.github/workflows/internal-build-fork.yml
@@ -5,11 +5,8 @@ name: Run internal build (forks)
 on:
   pull_request_target:
 
-# We only need to access membership info
-permissions:
-  contents: read
-  pull-requests: read
-  metadata: read
+# Read-only permissions are enough
+permissions: read-all
 
 concurrency:
   # Cancel existing builds for the same PR.
