GitHub workflows to check actor over author

--- a/.github/workflows/internal-build.yml
+++ b/.github/workflows/internal-build.yml
@@ -21,7 +21,7 @@ jobs:
         if: github.event.pull_request.head.repo.fork
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          AUTHOR: ${{ github.event.pull_request.user.login }}
+          AUTHOR: ${{ github.actor }}
         run: |
           echo "Fork detected. Checking if $AUTHOR is a Cloudflare org member..."
 
