Correctly handle the event.currentTarget and isTrusted properties
Per the spec, the currentTarget property of an Event
should be null if the event is not being dispatched.

Introduces a `pedantic_wpt` compat flag for correctly
handling these.

--- a/src/wpt/BUILD.bazel
+++ b/src/wpt/BUILD.bazel
@@ -66,6 +66,7 @@ wpt_test(
 
 wpt_test(
     name = "dom/events",
+    compat_flags = ["pedantic_wpt"],
     config = "dom/events-test.ts",
     wpt_directory = "@wpt//:dom/events@module",
 )
