implement node:http server-side modules

--- a/src/node/tsconfig.json
+++ b/src/node/tsconfig.json
@@ -31,6 +31,7 @@
       "node:stream/*": ["./*"],
       "node:timers/*": ["./*"],
       "node-internal:*": ["./internal/*"],
+      "cloudflare-internal:http": ["./internal/http.d.ts"],
       "cloudflare-internal:sockets": ["./internal/sockets.d.ts"],
       "cloudflare-internal:workers": ["./internal/workers.d.ts"],
       "cloudflare-internal:filesystem": ["./internal/filesystem.d.ts"],
