--- a/src/workerd/server/tests/python/BUILD.bazel
+++ b/src/workerd/server/tests/python/BUILD.bazel
@@ -76,3 +76,7 @@ py_wd_test("importable-env")
 py_wd_test("python-rpc")
 
 py_wd_test("workflow-entrypoint")
+
+py_wd_test("unprefixed-handler")
+
+py_wd_test("unprefixed-do-handler")
